@@ -5163,7 +5163,7 @@ are drawn near the border or near the text. This is a bitmask of the values:</p>
 <li>1 -- Visual flag at end of subline drawn near text</li>
 <li>2 -- Visual flag at begin of subline drawn near text</li>
 </ul>
-<p>Only first and second argument is interpreted.</p>
+<p>Only first and second arguments are interpreted.</p>
 <p class="last"><em>Example:</em> <tt class="docutils literal">line_wrap_visuals=3;0;false;false</tt></p>
 </dd>
 <dt>line_wrap_indent</dt>
@@ -5176,7 +5176,7 @@ first subline or one more indent level. Possible values:</p>
 <li>1 - Wrapped sublines are aligned to first subline indent (use the same indentation)</li>
 <li>2 - Wrapped sublines are aligned to first subline indent plus one more level of indentation</li>
 </ul>
-<p>Only first and second argument is interpreted.</p>
+<p>Only first and second arguments are interpreted.</p>
 <p class="last"><em>Example:</em> <tt class="docutils literal">line_wrap_indent=0;1;false;false</tt></p>
 </dd>
 <dt>translucency</dt>
@@ -5184,14 +5184,14 @@ first subline or one more indent level. Possible values:</p>
 (second argument). Values between 0 and 256 are accepted.</p>
 <p>Note for Windows 95, 98 and ME users:
 keep this value at 256 to disable translucency otherwise Geany might crash.</p>
-<p>Only the first and second argument is interpreted.</p>
+<p>Only the first and second arguments are interpreted.</p>
 <p class="last"><em>Example:</em> <tt class="docutils literal">translucency=256;256;false;false</tt></p>
 </dd>
 <dt>marker_line</dt>
 <dd><p class="first">The style for a highlighted line (e.g when using Goto line or goto tag).
 The foreground color (first argument) is only used when the Markers margin
 is enabled (see View menu).</p>
-<p>Only the first and second argument is interpreted.</p>
+<p>Only the first and second arguments are interpreted.</p>
 <p class="last"><em>Example:</em> <tt class="docutils literal">marker_line=0x000000;0xffff00;false;false</tt></p>
 </dd>
 <dt>marker_search</dt>
@@ -5204,7 +5204,7 @@ The second argument sets the background colour for the drawn rectangle.</p>
 <dd><p class="first">The style for a marked line (e.g when using the &quot;Toggle Marker&quot; keybinding
 (Ctrl-M)). The foreground color (first argument) is only used
 when the Markers margin is enabled (see View menu).</p>
-<p>Only the first and second argument is interpreted.</p>
+<p>Only the first and second arguments are interpreted.</p>
 <p class="last"><em>Example:</em> <tt class="docutils literal">marker_mark=0x000000;0xb8f4b8;false;false</tt></p>
 </dd>
 <dt>marker_translucency</dt>
@@ -5212,14 +5212,14 @@ when the Markers margin is enabled (see View menu).</p>
 (second argument). Values between 0 and 256 are accepted.</p>
 <p>Note for Windows 95, 98 and ME users:
 keep this value at 256 to disable translucency otherwise Geany might crash.</p>
-<p>Only the first and second argument is interpreted.</p>
+<p>Only the first and second arguments are interpreted.</p>
 <p class="last"><em>Example:</em> <tt class="docutils literal">marker_translucency=256;256;false;false</tt></p>
 </dd>
 <dt>line_height</dt>
 <dd><p class="first">Amount of space to be drawn above and below the line's baseline.
 The first argument defines the amount of space to be drawn above the line, the second
 argument defines the amount of space to be drawn below.</p>
-<p>Only the first and second argument is interpreted.</p>
+<p>Only the first and second arguments are interpreted.</p>
 <p class="last"><em>Example:</em> <tt class="docutils literal">line_height=0;0;false;false</tt></p>
 </dd>
 <dt>calltips</dt>
@@ -6647,7 +6647,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference external" href="geany.txt">View document source</a>.
-Generated on: 2011-08-25 15:23 UTC.
+Generated on: 2011-09-12 23:10 UTC.
 Generated by <a class="reference external" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference external" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
